@@ -21,7 +21,13 @@ $issn="0896-3207";
 #
 sub ltx2crossrefxml_local_ltx2unicode {
   my ($str) = @_;
-  $str =~ s/\\docstrip\b\s*/DocStrip/g; # tb129leingang
+  
+  $str =~ s/\\[hv]fill?\b\s*//g;
+  $str =~ s/\\[hv]filneg\b\s*//g;
+  $str =~ s/\\[hv]ss\b\s*//g;
+  $str =~ s/\\break\b\s*/ /g;
+
+  $str =~ s/\\docstrip\b\s*/DocStrip/g;        # tb129leingang
   $str =~ s/\\(app|cls|field|pkg|sty)\b\s*//g; # talbot
 
   $str =~ s/\\acro\b\s*//g;
