@@ -1,3 +1,9 @@
+2020-12-20  Karl Berry  <karl@freefriends.org>
+
+	* ltx2crossrefxml-tugboat.cfg: handle a few plain TeX commands,
+	enough for the plain tb129 bibliographies.
+	* Makefile: doc fix.
+
 2020-12-17  Karl Berry  <karl@freefriends.org>
 
 	* Makefile: run xmllint as one check. Dump citation extract.
