@@ -1,3 +1,7 @@
+2020-12-20  Karl Berry  <karl@freefriends.org>
+
+	* capcrossref.pl: doc fixes.
+
 2020-12-17  Karl Berry  <karl@freefriends.org>
 
 	* Makefile (cr1): rename test target for crossref.
